components/apps/it-tools/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: it-tools
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: it-tools
