components/apps/it-tools/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: it-tools
  namespace: it-tools
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  path: /
  to:
    kind: Service
    name: it-tools
  port:
    targetPort: it-tools
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
